# easyquant

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  bwa_alignment.sh  config.ini  config.ini.sample  create_example_data.sh  custom_transcriptome.py  easy_quant.py  environment.yml  example_command.sh  get_neo_orfs.py  io_methods.py  pyproject.toml  random_sequence_generator.py  requantify.py  requirements.txt  run_test.sh  run_test_random_seq.sh  setup.py  star_alignment.sh  test_cigar.py  tests.py
easy_quant/: aligning.py  command_line.py  csv_to_fasta.py  easy_quant.py  indexing.py  pipeline.py  plot_reads.py  requantify.py  tests.py
example_data/: CLDN18_Context_seq.csv  CLDN18_Context_seq.tsv  example_rna-seq.bam
misc/: io_methods.py  queue.py  samples.py
src/bp_quant/: aligning.py  alignment_info.py  command_line.py  counting.py  coverage.py  csv_to_fasta.py  file_handler.py  file_headers.py  indexing.py  io_methods.py  pipeline.py  plot_reads.py  read_classification.py  read_processing.py  requantify.py  seq_table.py  version.py
src/bp_quant/alignment/: __init__.py  generate_alignment.py
src/bp_quant/general/: command_line.py  pipeline.py  version.py
src/bp_quant/io/: csv_to_fasta.py  file_handler.py  file_headers.py  io_methods.py  seq_table.py
src/bp_quant/plotting/: __init__.py  plot_reads.py
src/bp_quant/quantification/: counting.py  coverage.py  read_classification.py  read_processing.py  requantify.py
src/bp_quant/validation/: alignment_info.py
src/easy_quant/: aligning.py  command_line.py  csv_to_fasta.py  indexing.py  pipeline.py  plot_reads.py  requantify.py
tests/: test_alignment_info.py  test_coverage.py  test_io_methods.py  test_read_classification.py  test_read_processing.py  test_seq_table.py  tests.py
tests/integration_tests/: test_allow_mismatches.sh  test_bam_input.sh  test_bowtie2.sh  test_bowtie2_custom_params.sh  test_input_format.sh  test_keep_files.sh  test_star.sh  test_star_custom_params.sh
tests/unit_tests/: test_alignment_info.py  test_counting.py  test_coverage.py  test_io_methods.py  test_read_classification.py  test_read_processing.py  test_seq_table.py
