[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bp_quant"
version = "0.6.0"
authors = [
  {name = "TRON - Translational Oncology at the University Medical Center of the Johannes Gutenberg University Mainz", email = "patrick.sorn@tron-mainz.de"},
]
maintainers = [
  {name = "Patrick Sorn", email = "patrick.sorn@tron-mainz.de"},
  {name = "Jonas Ibn-Salem", email = "jonas.ibn-salem@tron-mainz.de"},
  {name = "Franziska Lang", email = "franziska.lang@tron-mainz.de"},
  {name = "Johannes Hausmann", email = "johannes.hausmann@tron-mainz.de"},
]
description = 'Quantification of reads at defined positions to verify custom input sequences. Given a gene fusion or splicing junction of interest, this tool can quantify RNA-seq reads supporting the breakpoint (or splice junction) by quantifying reads that map to the breakpoint (junction reads) and read pairs that span the breakpoint (spanning pairs).'
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = [
  "bp_quant", 
  "bp_quant.general", 
  "bp_quant.io", 
  "bp_quant.quantification", 
  "bp_quant.alignment", 
  "bp_quant.indexing", 
  "bp_quant.validation",
  "bp_quant.plotting"
]
package-dir = {"" = "src"}
py-modules = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/tron-bioinformatics/easyquant"

[project.scripts]
bp_quant = "bp_quant.general.command_line:bp_quant_cli"
